--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <span class="loading loading-spinner text-error"></span>
     </section>
 
-    <section id="video-container" class="w-11/12 mx-auto grid grid-cols-4 gap-5 mb-20">
+    <section id="video-container" class="w-11/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mb-20">
 
         <!-- <div class="card bg-base-100">
             <figure class="relative">
